[package]
name = "rustapi"
version = "0.1.0"
authors = ["Rafael Ferrés <rafael.ferres-jum@parceiros-kroton.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
